# learnCPP

./: .gitignore  AbstractHuman.cpp  AbstractHuman.h  CMakeLists.txt  Doxyfile  Human.cpp  Human.h  README.md  TeachingAssistant.cpp  TeachingAssistant.h  cpplint.py  main.cpp
src/: TeachingAssistant.cpp
src/quest/: CMakeLists.txt  Makefile  README.md
src/quest/answer/: Q1.h  Q2.cpp  Q2.h  Q3Children.cpp  Q3Children.h  Q3Parent.cpp  Q3Parent.h
src/quest/mains/: mainQ1.cpp  mainQ2.cpp  mainQ3.cpp
src/quest/question/: Q1.h  Q2.h  Q3Children.cpp  Q3Children.h  Q3Parent.cpp  Q3Parent.h
src/sample/: AbstractHuman.cpp  AbstractHuman.h  CMakeLists.txt  Human.cpp  Human.h  TeachingAssistant.h  cast.c  cast.cpp  constexpr.cpp  hello_world.c  hello_world.cpp  main.cpp  reference.c  reference.cpp  scope.cpp
src/sample/TeachingAssistant/: TeachingAssistant.cpp  TeachingAssistant.h  main.cpp
src/sample/answer/: reference.c  reference.cpp
